Replace deprecated constructors and remove unused import statements
This fixes several build warnings.

Signed-off-by: Stefan Weil <sw@weilnetz.de>